--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^9.0.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
