--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
     "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
